<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cse110.jamwithme.logina_ctivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/navi_disprofile"
        android:title="@string/uprof"
        app:showAsAction="never"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/navi_friend"
        android:title="@string/friend"
        app:showAsAction="never"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/matching"
        android:title="@string/match"
        app:showAsAction="never"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/log_out"
        android:title="@string/logout"
        app:showAsAction="never"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/delete_acct"
        android:title="@string/del"
        app:showAsAction="never"
        android:orderInCategory="100"
        />

</menu>
