<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_biography"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cse110.jamwithme.Biography">

    <TextView
        android:text="@string/abt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:id="@+id/tvBio"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/nxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/bNext5"
        android:textColor="@android:color/white"
        android:background="?android:attr/statusBarColor"/>

    <TextView
        android:text="@string/abtblurb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textStyle="normal|italic"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tvBio"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textPersonName"
        android:ems="10"
        android:id="@+id/eTBiography"
        android:hint="Start Here!                           500 characters or less. :)"
        android:maxLength="500"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
