<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_match_query"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cse110.jamwithme.MatchQuery">

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exp_rating_bar"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/tvName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/exp_lvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvExpLvl"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_alignBottom="@+id/exp_rating_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:layout_toLeftOf="@+id/exp_rating_bar"
        android:layout_toStartOf="@+id/exp_rating_bar" />

    <TextView
        android:text="@string/instruments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvInstr"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/exp_rating_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/red_x"
        android:id="@+id/bDecline"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/play_blue"
        android:id="@+id/bPlay"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/green_check"
        android:id="@+id/bAccept"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:scaleX="6"
        android:scaleY="6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/alert_light_frame"
        android:id="@+id/ivProfile"
        android:layout_marginBottom="75dp"
        android:layout_above="@+id/tvName"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
